--- a/src/assets/editor.css
+++ b/src/assets/editor.css
@@ -1,3 +1,15 @@
+textarea::-webkit-scrollbar {
+    width: 6px;
+}
+textarea::-webkit-scrollbar-thumb {
+    background-color: #0003;
+    border-radius: 10px;
+    transition: all .2s ease-in-out;
+}
+textarea::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
 .el-textarea__inner {
     height: 100%;
 }
