--- a/src/assets/marked.css
+++ b/src/assets/marked.css
@@ -1,48 +1,7 @@
-*{
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box
-}
-body{
-    margin:0
-}
-body.reader-day-mode{
-    background-color:#fff
-}
-body.reader-night-mode{
-    background-color:#3d3d3d
-}
-body ol,body ul{
-    padding-left:0
-}
-body b,body h1,body h2,body h3,body h4,body h5,body h6,body strong{
-    font-weight:600
-}
-body a,body a:hover{
-    color:#595959
-}
-body input{
-    border:0
-}
-body input::-moz-placeholder{
-    color:#999;
-    opacity:1
-}
-body input:-moz-placeholder{
-    color:#999
-}
-body input:-ms-input-placeholder{
-    color:#999
-}
-body input::-webkit-input-placeholder{
-    color:#999
-}
-body :focus{
-    outline:0
-}
 img.math-block,img.math-inline{
     max-width:100%
 }
-body.reader-night-mode img.math-block,body.reader-night-mode img.math-inline{
+html.dark img.math-block,html.dark img.math-inline{
     -webkit-filter:invert(.8);
     filter:invert(.8)
 }
@@ -100,7 +59,7 @@ body.reader-night-mode img.math-block,body.reader-night-mode img.math-inline{
     position:relative;
     top:1px
 }
-body.reader-night-mode .note-view{
+html.dark .note-view{
     color:#b3b3b3
 }
 .note-view a,.note-view a:hover{
@@ -111,7 +70,7 @@ body.reader-night-mode .note-view{
     line-height:1.7;
     margin:0 0 15px
 }
-body.reader-night-mode .note-view h1,body.reader-night-mode .note-view h2,body.reader-night-mode .note-view h3,body.reader-night-mode .note-view h4,body.reader-night-mode .note-view h5,body.reader-night-mode .note-view h6{
+html.dark .note-view h1,html.dark .note-view h2,html.dark .note-view h3,html.dark .note-view h4,html.dark .note-view h5,html.dark .note-view h6{
     color:#b3b3b3
 }
 .note-view h1{
@@ -147,7 +106,7 @@ body.reader-night-mode .note-view h1,body.reader-night-mode .note-view h2,body.r
     line-height:30px;
     margin:0 0 20px
 }
-body.reader-night-mode .note-view blockquote{
+html.dark .note-view blockquote{
     background-color:#595959;
     border-color:#262626
 }
@@ -194,7 +153,7 @@ body.reader-night-mode .note-view blockquote{
     line-height:20px;
     background-color:#282c34
 }
-body.reader-night-mode .note-view pre{
+html.dark .note-view pre{
     background-color:#262626;
     border-color:#1a1a1a
 }
@@ -212,7 +171,7 @@ body.reader-night-mode .note-view pre{
     font-size:16px;
     white-space:pre-wrap
 }
-body.reader-night-mode .note-view code{
+html.dark .note-view code{
     background-color:#262626
 }
 .note-view table{
@@ -256,7 +215,7 @@ body.reader-night-mode .note-view code{
     vertical-align:middle;
     border:0
 }
-body.reader-night-mode .note-view .image-package img{
+html.dark .note-view .image-package img{
     opacity:.85
 }
 .note-view .image-package .image-caption{
@@ -274,7 +233,7 @@ body.reader-night-mode .note-view .image-package img{
 .note-view .image-package .image-caption:empty{
     display:none
 }
-body.reader-night-mode .note-view .image-package .image-caption{
+html.dark .note-view .image-package .image-caption{
     border-color:#2e2e2e
 }
 .note-view .video-package{
@@ -294,7 +253,7 @@ body.reader-night-mode .note-view .image-package .image-caption{
     color:#999;
     line-height:1.7
 }
-body.reader-night-mode .note-view .video-package .video-description{
+html.dark .note-view .video-package .video-description{
     border-color:#2e2e2e
 }
 .note-view .video-package .video-description p{
@@ -312,7 +271,7 @@ body.reader-night-mode .note-view .video-package .video-description{
     box-sizing:border-box;
     padding:40px 40px 80px
 }
-body.reader-night-mode .kalamu-area{
+html.dark .kalamu-area{
     color:#b3b3b3
 }
 .kalamu-area a,.kalamu-area a:hover{
@@ -323,7 +282,7 @@ body.reader-night-mode .kalamu-area{
     line-height:1.7;
     margin:0 0 15px
 }
-body.reader-night-mode .kalamu-area h1,body.reader-night-mode .kalamu-area h2,body.reader-night-mode .kalamu-area h3,body.reader-night-mode .kalamu-area h4,body.reader-night-mode .kalamu-area h5,body.reader-night-mode .kalamu-area h6{
+html.dark .kalamu-area h1,html.dark .kalamu-area h2,html.dark .kalamu-area h3,html.dark .kalamu-area h4,html.dark .kalamu-area h5,html.dark .kalamu-area h6{
     color:#b3b3b3
 }
 .kalamu-area h1{
@@ -359,7 +318,7 @@ body.reader-night-mode .kalamu-area h1,body.reader-night-mode .kalamu-area h2,bo
     line-height:30px;
     margin:0 0 20px
 }
-body.reader-night-mode .kalamu-area blockquote{
+html.dark .kalamu-area blockquote{
     background-color:#595959;
     border-color:#262626
 }
@@ -406,7 +365,7 @@ body.reader-night-mode .kalamu-area blockquote{
     line-height:20px;
     background-color:#282c34
 }
-body.reader-night-mode .kalamu-area pre{
+html.dark .kalamu-area pre{
     background-color:#262626;
     border-color:#1a1a1a
 }
@@ -424,7 +383,7 @@ body.reader-night-mode .kalamu-area pre{
     font-size:12px;
     white-space:pre-wrap
 }
-body.reader-night-mode .kalamu-area code{
+html.dark .kalamu-area code{
     background-color:#262626
 }
 .kalamu-area table{
@@ -468,7 +427,7 @@ body.reader-night-mode .kalamu-area code{
     vertical-align:middle;
     border:0
 }
-body.reader-night-mode .kalamu-area .image-package img{
+html.dark .kalamu-area .image-package img{
     opacity:.85
 }
 .kalamu-area .image-package .image-caption{
@@ -486,7 +445,7 @@ body.reader-night-mode .kalamu-area .image-package img{
 .kalamu-area .image-package .image-caption:empty{
     display:none
 }
-body.reader-night-mode .kalamu-area .image-package .image-caption{
+html.dark .kalamu-area .image-package .image-caption{
     border-color:#2e2e2e
 }
 .kalamu-area .video-package{
@@ -506,7 +465,7 @@ body.reader-night-mode .kalamu-area .image-package .image-caption{
     color:#999;
     line-height:1.7
 }
-body.reader-night-mode .kalamu-area .video-package .video-description{
+html.dark .kalamu-area .video-package .video-description{
     border-color:#2e2e2e
 }
 .kalamu-area .video-package .video-description p{
