--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -164,3 +164,9 @@ body.not-found .el-main {
     width: 100vw !important;
     height: 100vh !important;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
+    .navi-drawer {
+        width: 40% !important;
+    }
+}
