--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -138,7 +138,7 @@ body.fixed .el-header {
 }
 
 body.fixed .el-main {
-    padding: 0;
+    /* padding: 0; */
     display: inline-flex;
     justify-content: center;
     align-items: center;
