--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -50,7 +50,7 @@ code::-webkit-scrollbar-track {
     padding: .2rem !important;
 }
 
-html {
+:root {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, .12);
 }
 
