Change font to woff & optimize.

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,6 +1,20 @@
-@font-face {
+/* @font-face {
     font-family: 'Trebuchet MS';
     src: url('./trebuc.ttf')
+} */
+
+@font-face {
+    font-family: 'Trebuchet MS';
+    font-weight: 400;
+    src: url('./Fonts/trebuc.woff2') format(woff2);
+    src: url('./Fonts/trebuc.woff') format(woff);
+}
+
+@font-face {
+    font-family: 'Trebuchet MS';
+    font-weight: 700;
+    src: url('./Fonts/trebuc-bold.woff2') format(woff2);
+    src: url('./Fonts/trebuc-bold.woff') format(woff);
 }
 
 pre {
