--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -71,6 +71,7 @@ code::-webkit-scrollbar-track {
 
 :root {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, .12);
+    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .12);
     --bg-color-primary: #fff;
     --bg-color-secondary: #f6f6f6;
     --border-color-secondary: #dce8f1;
@@ -82,6 +83,7 @@ code::-webkit-scrollbar-track {
 
 html.dark {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, .3);
+    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .3);
     --bg-color-primary: var(--el-bg-color);
     --bg-color-secondary: #2a2a2a;
     --border-color-secondary: #23170f;
