--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -78,6 +78,7 @@ code::-webkit-scrollbar-track {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, .12);
     --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .12);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .5);
+    --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, .5);
     --bg-color-primary: #fff;
     --bg-color-secondary: #f8f8f8;
     --bg-color-regular: #eee;
@@ -93,6 +94,7 @@ html.dark {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0);
     --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .8);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .98);
+    --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, .98);
     --bg-color-primary: #1e1e1e;
     --bg-color-secondary: #121212;
     --bg-color-regular: #060606;
