--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -96,10 +96,10 @@ code::-webkit-scrollbar-track {
 }
 
 html.dark {
-    --header-shadow: 0px 0px 12px rgba(0, 0, 0);
-    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .8);
-    --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .98);
-    --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, .98);
+    --header-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, 1);
+    --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, 1);
+    --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, 1);
     --bg-color-primary: #1e1e1e;
     --bg-color-secondary: #121212;
     --bg-color-regular: #060606;
