--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -80,6 +80,7 @@ code::-webkit-scrollbar-track {
     --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .12);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .5);
     --content-shadow-high-rev: 0px -16px 30px -8px rgba(0, 0, 0, .7);
+    --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #fff;
     --bg-color-secondary: #f8f8f8;
     --bg-color-regular: #eee;
@@ -100,6 +101,7 @@ html.dark {
     --content-shadow: 0px 0px .5rem rgba(0, 0, 0, 1);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, 1);
     --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, 1);
+    --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #1e1e1e;
     --bg-color-secondary: #121212;
     --bg-color-regular: #060606;
