--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -82,7 +82,7 @@ code::-webkit-scrollbar-track {
     --content-shadow-high-rev: 0px -16px 30px -8px rgba(0, 0, 0, .7);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #fff;
-    --bg-color-secondary: #f8f8f8;
+    --bg-color-secondary: #eff2f5;
     --bg-color-regular: #eee;
     --bg-color-chat-primary: #fff;
     --bg-color-chat-secondary: #efeff0;
