--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -77,8 +77,8 @@ code::-webkit-scrollbar-track {
 :root {
     --doc-height: 100%;
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, .12);
-    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, .12);
-    --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .5);
+    --content-shadow: 0px 4px 10px rgba(0, 0, 0, .1);
+    --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .4);
     --content-shadow-high-rev: 0px -16px 30px -8px rgba(0, 0, 0, .7);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #fff;
@@ -98,7 +98,7 @@ code::-webkit-scrollbar-track {
 
 html.dark {
     --header-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
-    --content-shadow: 0px 0px .5rem rgba(0, 0, 0, 1);
+    --content-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, 1);
     --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, 1);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
