--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -80,6 +80,7 @@ code::-webkit-scrollbar-track {
     --content-shadow: 0px 4px 10px rgba(0, 0, 0, .1);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, .4);
     --content-shadow-high-rev: 0px -16px 30px -8px rgba(0, 0, 0, .7);
+    --login-shadow: var(--content-shadow);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #fff;
     --bg-color-secondary: #eff2f5;
@@ -101,6 +102,7 @@ html.dark {
     --content-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
     --content-shadow-high: 0px 16px 40px -15px rgba(0, 0, 0, 1);
     --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, 1);
+    --login-shadow: 0px 1px 40px -8px rgb(0, 0, 0);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
     --bg-color-primary: #1e1e1e;
     --bg-color-secondary: #121212;
