Change markdown styles.

--- a/src/assets/marked-gpt.css
+++ b/src/assets/marked-gpt.css
@@ -141,9 +141,9 @@ html.dark .gpt-view blockquote{
     word-break:break-word;
     margin:-5px 0 20px 20px
 }
-.gpt-view ol li,.gpt-view ul li{
+/* .gpt-view ol li,.gpt-view ul li{
     line-height:30px
-}
+} */
 .gpt-view ol li ol,.gpt-view ol li ul,.gpt-view ul li ol,.gpt-view ul li ul{
     margin-top:15px
 }
