Add katex support.

--- a/src/assets/marked.css
+++ b/src/assets/marked.css
@@ -503,3 +503,6 @@ html.dark .kalamu-area .video-package .video-description{
 .kalamu-area .image-package .image-caption:empty{
     display:inline-block
 }
+.katex-html[aria-hidden] {
+    display: none;
+}
