markdown code style changed.

--- a/src/assets/marked.css
+++ b/src/assets/marked.css
@@ -173,7 +173,7 @@ html.dark .note-view pre{
     border-color:#1a1a1a
 }
 .note-view pre code{
-    font-family: 'Cascadia Code', 'Fira Code', 'Consolas', 'Courier New', '微软雅黑', 'Microsoft Yahei', monospace;
+    font-family: 'Fira Code', 'JetBrains Mono', 'Cascadia Code', 'Consolas', 'Courier New', '微软雅黑', 'Microsoft Yahei', monospace;
     padding:0;
     background-color:transparent;
     white-space:pre;
@@ -184,8 +184,9 @@ html.dark .note-view pre{
     background-color:#f6f6f6;
     vertical-align:middle;
     border:none;
-    font-size:16px;
-    white-space:pre-wrap
+    font-size:15px;
+    white-space:pre-wrap;
+    margin: 6px 0 18px;
 }
 html.dark .note-view code{
     background-color:#262626
@@ -517,4 +518,40 @@ h6>.katex-display:not(:only-child)
  {
     display: inline-block;
     margin: 0;
+}
+
+.bsr-head {
+    display: flex;
+    align-items: center;
+    padding: 2px 0px 12px;
+    background-color: #292d33;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.bsr-head .bsr-dot {
+    margin-right: 6px;
+    height: 10px;
+    width: 10px;
+    background-color: #c4c4c4;
+    border-radius: 50%;
+}
+
+.bsr-head .bsr-dot:nth-child(1) {
+    background-color: #f24e1e;
+}
+
+.bsr-head .bsr-dot:nth-child(2) {
+    background-color: #ffc700;
+}
+
+.bsr-head .bsr-dot:nth-child(3) {
+    background-color: #0fa958;
+}
+
+.bsr-head .bsr-title {
+    margin-left: 6px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #888;
+    font-size: 15px;
 }
