--- a/src/assets/marked.css
+++ b/src/assets/marked.css
@@ -174,19 +174,19 @@ html.dark .note-view pre{
 }
 .note-view pre code{
     font-family: 'Fira Code', 'JetBrains Mono', 'Cascadia Code', 'Consolas', 'Courier New', '微软雅黑', 'Microsoft Yahei', monospace;
-    padding:0;
+    padding: 0 0 12px;
     background-color:transparent;
     white-space:pre;
     border-radius: 5px;
 }
 .note-view code{
-    padding:2px 4px;
+    padding:2px 4px 8px;
     background-color:#f6f6f6;
     vertical-align:middle;
     border:none;
     font-size:15px;
     white-space:pre-wrap;
-    margin: 6px 0 18px;
+    margin: 6px 0 0;
 }
 html.dark .note-view code{
     background-color:#262626
