--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -110,8 +110,8 @@ html.dark {
     --content-shadow-high-rev: 0px -16px 40px -15px rgba(0, 0, 0, 1);
     --login-shadow: 0px 1px 40px -8px rgb(0, 0, 0);
     --code-shadow: rgba(0, 0, 0, 0.55) 0px 2px 10px;
-    --bg-color-primary: #1e252d;
-    --bg-color-secondary: #1c2025;
+    --bg-color-primary: #111a25;
+    --bg-color-secondary: #0e1620;
     --bg-color-regular: #060606;
     --bg-color-chat-primary: #26282c;
     --bg-color-chat-secondary: #121212;
