Change banner to wave form.

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -124,7 +124,7 @@ html.dark {
     --text-color-chat-primary: #b3b3b3;
     --border-color-secondary: #23170f;
     /* --bg-sky-color: #0159b2; */
-    --bg-sky-color: #141b4d;
+    --bg-sky-color: #01274f;
     --bg-banner-sky-color: linear-gradient(0deg, transparent, rgba(0, 0, 0, .6)), radial-gradient(circle at 100% 100%, #373c93, #0e1744);
     --bg-sky-color-dark: #0654a5;
     --bg-sky-color-light-3: #054280;
